alignment fixes to login and sign up page

--- a/angular/src/app/log-in/log-in.component.css
+++ b/angular/src/app/log-in/log-in.component.css
@@ -3,7 +3,9 @@
   margin: 10px;
   box-sizing: border-box;
 }
-
+h2{
+  text-align: center;
+}
 .container {
   position: relative;
   display: flex;
@@ -38,7 +40,7 @@
   border: none;
   outline: none;
   height: 50px;
-  width: 100%;
+  width: 90%;
   background-color: black;
   color: white;
   border-radius: 4px;
